# HaskelcuttyTest

./: CHANGELOG.md  Cutty.cabal  LICENSE  program.hi  program.hs
app/: app.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
